fcc/tribute-page/styles.css
:root{
	font-family: "Noto Sans", sans-serif;
	color: #121212;
	background-color: white;
	line-height: 200%;
}
#title{
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
#img-div{
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
}
#tribute-info{
	display: flex;
	flex-direction:column;
	justify-content: center;
	align-items: flex-start;
	width: 50%;
	padding: 1%;
	margin: auto;
}
#img-old{
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	margin:auto;
}

